--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 	<div class="container">
-		<div class="well" style="background-image: url(/static/images/splash.png); background-size:contain; background-size:100%; width:842px;height:596px;">
+		<div class="well" 
+			style="background-image: url(/static/images/splash.jpg); background-size:contain; background-size:100%; width:842px;height:500px;">
 	        <h2>Veil Anti-virus Evasion</h2>
 	        <a class="btn btn-primary btn-large" href="/registration">Register &raquo;</a>
 		</div>
